[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/Dialogue/Dialog Box.png" type="Texture" id=1]
[ext_resource path="res://UI/Dialogue/Manager icon dialogue.png" type="Texture" id=2]
[ext_resource path="res://UI/Dialogue/PO Head icon dialogue.png" type="Texture" id=3]
[ext_resource path="res://UI/Dialogue/QA Head icon dialogue.png" type="Texture" id=4]
[ext_resource path="res://UI/Dialogue/UX head icon for dialogues.png" type="Texture" id=5]
[ext_resource path="res://UI/Dialogue/Dev head icon for dialogues.png" type="Texture" id=6]
[ext_resource path="res://UI/Dialogue/Scrum Master Head Icon dialogue.png" type="Texture" id=7]
[ext_resource path="res://Font/quaver.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://DialogWindowAndIcon.gd" type="Script" id=9]
[ext_resource path="res://UI/Dialogue/Next Dialog.png" type="Texture" id=10]
[ext_resource path="res://CallDialogBoxes.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 28
extra_spacing_bottom = 3
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=2]
resource_name = "NextDialog"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 699, 151 ), Vector2( 705, 151 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 699, 151 ) ]
}

[node name="DialogBoxes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -4.0
script = ExtResource( 11 )

[node name="DialogWindowAndIcon" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.024
anchor_right = 0.5
anchor_bottom = 1.024
margin_left = -317.5
margin_top = -353.208
margin_right = 363.5
margin_bottom = -51.208
script = ExtResource( 9 )
button_path = NodePath("TextureButton")

[node name="TextureRect" type="TextureRect" parent="DialogWindowAndIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 46.5
margin_top = 40.0
margin_right = 40.5
margin_bottom = 29.0
rect_pivot_offset = Vector2( 251, 37 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="DialogWindowAndIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 99.0
margin_top = 119.0
margin_right = -11.0
margin_bottom = -44.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "This is some filler dialogue that some character will say some time"
text = "This is some filler dialogue that some character will say some time"

[node name="Tween" type="Tween" parent="DialogWindowAndIcon"]

[node name="DevIcon" type="Sprite" parent="DialogWindowAndIcon"]
visible = false
position = Vector2( -54, 152 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="ManagerIcon" type="Sprite" parent="DialogWindowAndIcon"]
position = Vector2( -54, 152 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="POIcon" type="Sprite" parent="DialogWindowAndIcon"]
visible = false
position = Vector2( -54, 152 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="QAIcon" type="Sprite" parent="DialogWindowAndIcon"]
visible = false
position = Vector2( -54, 152 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="SMIcon" type="Sprite" parent="DialogWindowAndIcon"]
visible = false
position = Vector2( -54, 152 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="UXIcon" type="Sprite" parent="DialogWindowAndIcon"]
visible = false
position = Vector2( -54, 152 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="TextureButton" type="TextureButton" parent="DialogWindowAndIcon"]
margin_left = 699.0
margin_top = 151.0
margin_right = 788.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 10 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogWindowAndIcon/TextureButton"]
autoplay = "NextDialog"
anims/NextDialog = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="PlayerChoices" type="Control" parent="DialogWindowAndIcon"]
margin_left = 620.0
margin_top = 56.0
margin_right = 856.0
margin_bottom = 306.0

[node name="VBoxContainer" type="VBoxContainer" parent="DialogWindowAndIcon/PlayerChoices"]
margin_left = -8.0
margin_top = 24.0
margin_right = 224.0
margin_bottom = 258.0

[connection signal="tween_completed" from="DialogWindowAndIcon/Tween" to="DialogWindowAndIcon" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="DialogWindowAndIcon/TextureButton" to="." method="_on_TextureButton_pressed"]
